...
import androidx.compose.ui.text.input.KeyboardCapitalization
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import com.mattgouws.maxlifttracker.R
import com.mattgouws.maxlifttracker.ui.theme.MaxLiftTrackerTheme

val WeightUnits = listOf("kg", "lb")

const val MAX_NAME_LENGTH = 40

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun AddMetricDialog(
...
